conf/bfs.local.rules.v6
# Generated by ip6tables-save v1.4.14 on Sun Oct  5 21:23:23 2014
# Generated by ip6tables-save v1.4.14 on Sat Oct 25 23:43:41 2014
*mangle
:PREROUTING ACCEPT [8156:600234]
:INPUT ACCEPT [1039:87462]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1055:91019]
:POSTROUTING ACCEPT [1056:91139]
COMMIT
# Completed on Sat Oct 25 23:43:41 2014
# Generated by ip6tables-save v1.4.14 on Sat Oct 25 23:43:41 2014
*filter
:INPUT DROP [1039:87462]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1055:91019]

# Allow unlimited traffic on loopback
-A INPUT -i lo -j ACCEPT

# Limit the number of incoming connections per IP address
-A INPUT -m state --state NEW -m connlimit --connlimit-above 50 -j REJECT

# Allow established connections without limitation
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow all incoming ICMP messages with limited rate
-A INPUT -p icmpv6 -m limit --limit 50/second -j ACCEPT

# Allow connection to certain services with limited rate
-N services
-A INPUT -m state --state NEW -m limit --limit 10/second -j services

# Reject all other incoming packets
-A INPUT -j REJECT

###############################################################################
# services

# ftp
-A services -p tcp --dport 21 -j ACCEPT
# ssh
-A services -p tcp --dport 1983 -j ACCEPT
# smtp
-A services -p udp --dport 25 -j ACCEPT
-A services -p tcp --dport 25 -j ACCEPT
# domain
-A services -p udp --dport 53 -j ACCEPT
-A services -p tcp --dport 53 -j ACCEPT
# dhcp
-A services -p udp --dport 67 -j ACCEPT
# http
-A services -p tcp --dport 80 -j ACCEPT
# pop
-A services -p tcp --dport 110 -j ACCEPT
# nntp
-A services -p tcp --dport 119 -j ACCEPT
# nntp (incoming feeds)
-A services -p tcp --dport 120 -j ACCEPT
# nntp (outoging feeds)
-A services -p tcp --dport 121 -j ACCEPT
# ntp
-A services -p udp --dport 123 -j ACCEPT
# imap
-A services -p tcp --dport 143 -j ACCEPT
# bgp
-A services -p tcp --dport 179 -j ACCEPT
# https
-A services -p tcp --dport 443 -j ACCEPT
# smtps
-A services -p tcp --dport 465 -j ACCEPT
# submission
-A services -p udp --dport 587 -j ACCEPT
-A services -p tcp --dport 587 -j ACCEPT
# tincd
-A services -p udp --dport 656 -j ACCEPT
-A services -p tcp --dport 656 -j ACCEPT
# imaps
-A services -p tcp --dport 993 -j ACCEPT
# pop3s
-A services -p tcp --dport 995 -j ACCEPT
# jabber
-A services -p tcp --dport 5222 -j ACCEPT
# zapp script info page server
-A services -p tcp --dport 8090 -j ACCEPT
# fastd
-A services -p udp --dport 10000 -j ACCEPT
# alfred
-A services -p udp --dport 16962 -j ACCEPT
# mangband
-A services -p tcp --dport 18346 -j ACCEPT
# Return from chain services
-A services -j RETURN

###############################################################################
# FORWARD

# Limit the number of forwarded connections per IP address
-A FORWARD -m state --state NEW -m connlimit --connlimit-above 200 -j REJECT

# Allow established connections without limitation
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT

# Mesh-VPN
-A FORWARD -i br-ff3l -o icvpn -j ACCEPT
-A FORWARD -i br-ff3l -o tun0 -j ACCEPT

# IC-VPN
-A FORWARD -i icvpn -o br-ff3l -j ACCEPT

# Reject all other traffic
-A FORWARD -j REJECT

COMMIT
# Completed on Sun Oct  5 21:23:23 2014
